# astero-client

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  update_proto.sh
src/: asteroid.rs  body.rs  client.rs  constant.rs  health_bar.rs  main.rs  msg.rs  player.rs  proto.rs  shot.rs  util.rs
src/client/: body.rs  mod.rs  proto.rs  proto_impls.rs
src/client/defs/: astero.rs
src/client/proto_defs/: astero.rs
src/components/: accelerator.rs  body.rs  cannon.rs  color.rs  controllable.rs  health_bar.rs  interpolation_buffer.rs  life.rs  mod.rs  network_id.rs  nickname.rs  sprite.rs
src/proto/: astero.rs  mod.rs
src/proto/defs/: astero.rs  mmob.rs  mod.rs
src/resources/: assets.rs  client.rs  delta_time.rs  input.rs  mod.rs  msg_queue.rs  player_id.rs  server_clock.rs  system_run_mode.rs  unconfirmed_shot_id.rs
src/systems/: interpolation.rs  kinematics_prediction.rs  mod.rs  network.rs  shooting.rs  unconfirmed_shot_cleanup.rs
